more examples added to the variables

--- a/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
+++ b/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
@@ -19,39 +19,345 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c767b3a",
+   "metadata": {},
+   "source": [
+    "## Python Variable Syntax\n",
+    "\n",
+    "variable_name = value (anything any datatypes , we will discuss datatype next notebook)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "627c1892",
+   "execution_count": 5,
+   "id": "3a47a908",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = 10 \n",
-    "y = 20.4\n",
-    "z = \"Hello, World!\""
+    "y = 0.1\n",
+    "z = \"Hello, World!\"\n",
+    "is_active = True\n",
+    "data = [1, 2, 3, 4, 5]\n",
+    "config = {\"host\": \"localhost\", \"port\": 8080}    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9f32dac",
+   "metadata": {},
+   "source": [
+    "### how to know the datatype \n",
+    "\n",
+    "by make use of type() function provide by python , lets check the above varibales datatype "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "06ea39bf",
+   "execution_count": 8,
+   "id": "07b844b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x)  # int\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "088e05d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y)  # float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f4d8e48f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "144c4dda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e9e2bb76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(is_active)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d4e133ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9b6b886a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "660a067e",
+   "metadata": {},
+   "source": [
+    "### 🔹 **Variable Naming Rules**\n",
+    "- Must start with a letter or underscore (`_`)\n",
+    "- Cannot start with a number  \n",
+    "- Cannot contain spaces  \n",
+    "- Cannot use special characters (`@`, `#`, `-`, `%`, etc.)  \n",
+    "- Case-sensitive (`name` and `Name` are different)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "80bffae9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x )"
+    "# ### ✅ **Valid Examples**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f09184bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_name = \"Venu\"\n",
+    "speed_kmph = 60\n",
+    "_temperature = 98.6\n",
+    "user1 = \"Daniel\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "853f50d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(_temperature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc72d09",
+   "metadata": {},
+   "source": [
+    "### ❌ **Invalid Examples**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e4e0402",
+   "metadata": {},
+   "source": [
+    "1name = \"Venu\" # cannot start with number\n",
+    "\n",
+    "user-name = \"Venu\" # hyphen not allowed\n",
+    "\n",
+    "user name = \"Venu\" # spaces not allowed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c95f239",
+   "metadata": {},
+   "source": [
+    "### 🔹 **Multiple Assignment**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b97a1b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b, c = 1, 2, 3\n",
+    "x = y = z = \"same value\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "21001f9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a, b, c )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "47ba7d26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "same value same value same value\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x, y, z)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5346431e",
+   "id": "d6d2f380",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ds-ai-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
