--- a/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
+++ b/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
@@ -334,8 +334,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d6d2f380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a valid variable name\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"this is a valid variable name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a9706f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "varibale names are case sensitive\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"varibale names are case sensitive\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50ff9e40",
    "metadata": {},
    "outputs": [],
    "source": []
