disscussed a mathematical Operations with variabls

--- a/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
+++ b/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
@@ -369,9 +369,214 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2740f8e3",
+   "metadata": {},
+   "source": [
+    "### 📘 Mathematical Operations with Variables in Python\n",
+    "\n",
+    "Python allows you to perform arithmetic calculations using variables just like a calculator.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ➤ **Basic Arithmetic Operators**\n",
+    "\n",
+    "| Operator | Meaning | Example | Result |\n",
+    "|---------|---------|---------|--------|\n",
+    "| `+` | Addition | `a + b` | Adds values |\n",
+    "| `-` | Subtraction | `a - b` | Difference |\n",
+    "| `*` | Multiplication | `a * b` | Product |\n",
+    "| `/` | Division | `a / b` | Returns float result |\n",
+    "| `//` | Floor Division | `a // b` | Removes decimals |\n",
+    "| `%` | Modulus | `a % b` | Remainder |\n",
+    "| `**` | Exponent (power) | `a ** b` | a raised to b |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96ac1289",
+   "metadata": {},
+   "source": [
+    "#### Addition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "50ff9e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "y = 10\n",
+    "total = x + y\n",
+    "print(\"Total:\", total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72786ca4",
+   "metadata": {},
+   "source": [
+    "#### Subtration "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "23223cb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subtraction: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 5\n",
+    "print(\"subtraction:\", x - y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d8cf8a1",
+   "metadata": {},
+   "source": [
+    "#### multiplication "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c36f961b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "multiplication: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"multiplication:\", x * y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b34531f",
+   "metadata": {},
+   "source": [
+    "#### division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "56af200f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division : 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"division :\",x / y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "05d7280c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division without folt values  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"division without folt values \", x // y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "391c818b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remainder : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"remainder :\", x % y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "40f17086",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "square : 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"square :\", x ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7bbe76f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exponentiation : 100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"exponentiation :\", x ** y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50ff9e40",
+   "id": "0793aa7c",
    "metadata": {},
    "outputs": [],
    "source": []
