added indexing in string

--- a/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
+++ b/01_python_basics/Variables_Numbers_Strigs/variables.ipynb
@@ -574,9 +574,345 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d96f8b8e",
+   "metadata": {},
+   "source": [
+    "#### concatinating the with \"+\" operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0793aa7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Name: shankarMahadevan\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name = \"shankar\"\n",
+    "last_name = \"Mahadevan\"\n",
+    "\n",
+    "# Combine first and last names into a full name\n",
+    "full_name = first_name + last_name\n",
+    "print(\"Full Name:\", full_name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35d1c4b",
+   "metadata": {},
+   "source": [
+    "## lets discuss about the string data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "afa822b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Name with space: shankar Mahadevan\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_name = first_name + \" \" + last_name\n",
+    "print(\"Full Name with space:\", full_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c1f0023e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shankar Mahadevan\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_name = f\"{first_name} {last_name}\"\n",
+    "print(full_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d56c4402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shankar Mahadevan is 25 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 25\n",
+    "print(f\"{first_name} {last_name} is {age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feb7d7e1",
+   "metadata": {},
+   "source": [
+    "# 🎵 String Indexing in Python (Example: \"Shankar Mahadevan\")\n",
+    "\n",
+    "A **string** in Python is a sequence of characters.  \n",
+    "Each character has a **position** called an *index*.\n",
+    "\n",
+    "Python supports two types of indexing:\n",
+    "\n",
+    "- **Positive Indexing** → counts from the front (starting at 0)  \n",
+    "- **Negative Indexing** → counts from the end (starting at -1)\n",
+    "\n",
+    "Let's use the name **\"Shankar Mahadevan\"** to understand indexing.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔹 Positive Indexing (0, 1, 2, ...)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9d5a89d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'shankar Mahadevan'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9a06912a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_name[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a67b6412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(full_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "87f3f9ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_name[16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f2600bfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "h\n",
+      " \n",
+      "M\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_name[0])   # S\n",
+    "print(full_name[1])   # h\n",
+    "print(full_name[7])   # space\n",
+    "print(full_name[8])   # M\n",
+    "print(full_name[16])  # n\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de1ecfdf",
+   "metadata": {},
+   "source": [
+    "### 📌 Negative Indexing Row (for `full_name = \"Shankar Mahadevan\"`)\n",
+    "\n",
+    "## Characters:\n",
+    "S   h   a   n   k   a   r       M   a   h   a   d   e   v   a   n\n",
+    "\n",
+    "## Negative Indexes:\n",
+    "-17 -16 -15 -14 -13 -12 -11 -10  -9 -8 -7 -6 -5 -4 -3 -2 -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "6185453e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_name[-1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "fe9f8c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_name[-2] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a45cd0ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_name[-17] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "600ffa53",
+   "metadata": {},
+   "source": [
+    "#### Combine positive and negative indexing for understanding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "360a6e0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s s\n",
+      "M M\n",
+      "n n\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_name[0], full_name[-17])   # S S\n",
+    "print(full_name[8], full_name[-9])    # M M\n",
+    "print(full_name[16], full_name[-1])   # n n\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0793aa7c",
+   "id": "d0f3cd9f",
    "metadata": {},
    "outputs": [],
    "source": []
